@@ -16,15 +16,6 @@ Bugs:
 		- Produce lots and lots of output -> watch mem usage grow
 		- Probably the RKConsole is to blame (run outside console -> no significant increase)
 			- Maybe the kate-part needs to be reset (syntax parse tree) every once in a while?
-	- A call to "browser ()" *will* crash rkward.
-		- I suppose it's a long jump out of the tryEval context.
-			- do_browser() seems to guard against that. Instead, it's likely that the console io buffer is used, but not set up
-		- investigate why exactly this happens, and whether it's fixable in R or rkward
-		- maybe we can fix this issue (and save other work), by actually running User/Console commands through run_Rmainloop. The command-text would be fed in via R_ReadConsole (would need to keep a buffer). To terminate the loop, we can return 0 there, which should get us out.
-			- How to differentiate readline calls to get new command data from readline calls to get user info?! The prompt may not be realiable enough. Is there other info?
-				- the hist parameter may be a hint, but is also set in do_browser
-				- Does R_ResetConsole play any role in this?
-			- Where would we jump after a SIGINT?
 	- rnorm () and friends auto-print value only once. R_Visible is 0 on subsequent calls (what in the world is going on, here?)
 
 Compilation / technical
@@ -77,6 +68,15 @@ UI-stuff
 	- use RKGlobals::marginHint (), RKGlobals::spacingHint () everywhere
 
 Internal stuff:
+	- maybe we can do stuff like auto-printing, toplevel handlers, syntax error information by using R_ReplDLLdo1 () for user/console commands
+		The command-text would be fed in via R_ReadConsole (would need to keep a buffer).
+			- How to differentiate readline calls to get new command data from readline calls to get user info?! The prompt may not be realiable enough. Is there other info?
+				- the hist parameter may be a hint, but is also set in do_browser
+				- Does R_ResetConsole play any role in this?
+				- maybe (but this would really be taking chances) do so by determining, if the buffer belongs to the main Repl_Console (currently that buffer always remains the same during one loop, but can we be certain, this never changes?)
+				- RBusy is set to 0 just before the command data is read!
+			- Where would we jump after a SIGINT? I suppose we'd have to make sure to clear the buffer before signalling (another mutex)
+			- It's R_ReplDLLinit (), and R_ReplDLLdo1 () for us, not run_Rmainloop!
 	RCommandReceiver:
 		- add virtual rCommandStarted () function, so receivers can find out, when their command becomes active
 	REmbedInternal:
