@@ -1,3 +1,4 @@
+- do not crash on call to "browser ()"
 - the object browser is updated automatically when needed
 - allow some more configuration in object browser
 - include all package environments in object list
